--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="home">
     <nav class="container-navbar">
         <img class="logo" src="" alt="logo">
         <ul class="ul-navbar">
@@ -28,7 +32,17 @@
 
         <!-- Content -->
         <div class="home-container">
-            <img src="foto/poci4.png" alt="">
+            <div class="judul-home">
+                <h1>Lorem Ipsum</h1>
+                <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                <div class="btn-home-container">
+                    <a class="btn-home" href="menu.html">Order Now</a>
+                </div>
+            </div>
+            <div class="foto-home">
+                <img src="foto/poci.png" alt="poci">
+            </div>
         </div>
+    </div>
 </body>
 </html>
