--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
       <h2 class="header-upper-menu">Top List</h2>
       <div class="upper-menu">
         <div class="column-upper-menu">
-          <div class="menu-list">
+          <div class="menu-upper-list">
             <img src="foto/poci-polos-3.png" alt="poci-polos-1" />
             <h3>Poci Milo</h3>
             <hr />
@@ -43,17 +43,17 @@
           </div>
         </div>
         <div class="column-upper-menu">
-          <div class="menu-list">
+          <div class="menu-upper-list">
             <img src="foto/poci-polos-3.png" alt="poci-polos-1" />
-            <h3>Poci Milo</h3>
+            <h3>Poci Original</h3>
             <hr />
             <h4>Rp 5.000</h4>
           </div>
         </div>
         <div class="column-upper-menu">
-          <div class="menu-list">
+          <div class="menu-upper-list">
             <img src="foto/poci-polos-3.png" alt="poci-polos-1" />
-            <h3>Poci Milo</h3>
+            <h3>Poci Original</h3>
             <hr />
             <h4>Rp 5.000</h4>
           </div>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="grid-container">
-        <h2>Menu List</h2>
+        <h2 class="header-menu">Menu List</h2>
         <div class="grid-items">
             <div class="column-menu">
                 <div class="menu-list">
@@ -75,8 +75,61 @@
                     <a class="btn-menu" href="#">Order</a>
                 </div>
             </div>
-    
-            <!-- Repeat the above structure for each menu item -->
+            <div class="column-menu">
+                <div class="menu-list">
+                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
+                    <h3>Poci Milo</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu">
+                <div class="menu-list">
+                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
+                    <h3>Poci Milo</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu">
+                <div class="menu-list">
+                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
+                    <h3>Poci Milo</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu">
+                <div class="menu-list">
+                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
+                    <h3>Poci Milo</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu">
+                <div class="menu-list">
+                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
+                    <h3>Poci Milo</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
         </div>
     </div>
     
