Add animation and JavaScript

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 <body>
     <div class="home">
@@ -33,16 +34,17 @@
         <!-- Content -->
         <div class="home-container">
             <div class="judul-home">
-                <h1>Lorem Ipsum</h1>
+                <h1><span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
                 <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                 <div class="btn-home-container">
                     <a class="btn-home" href="menu.html">Order Now</a>
                 </div>
             </div>
             <div class="foto-home">
-                <img src="foto/poci.png" alt="poci">
+                <img id="animated-image" src="foto/poci.png" alt="poci">
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
-</html>
+</html> 
