--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="home">
     <nav class="container-navbar">
-        <img class="logo" src="" alt="logo">
+        <div class="logo-container">        
+            <img class="logo" src="foto/logo.png" alt="logo">
+            <h1 class="judul-logo">Warung Bu Ida</h1></div>
         <ul class="ul-navbar">
             <li class="li-navbar">
                 <a href="index.html" class="a-navbar">Home</a>
@@ -35,7 +37,7 @@
         <div class="home-container">
             <div class="judul-home">
                 <h1><span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
-                <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                <h3>Jl. Kali Sari, Dauh Puri Kaja, Kec. Denpasar Utara</h3>
                 <div class="btn-home-container">
                     <a class="btn-home" href="menu.html">Order Now</a>
                 </div>
