--- a/menu.html
+++ b/menu.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <nav class="container-navbar">
-      <img class="logo" src="" alt="logo" />
+      <div class="logo-container">        
+        <img class="logo" src="foto/logo.png" alt="logo">
+        <h1 class="judul-logo">Warung Bu Ida</h1></div>
       <ul class="ul-navbar">
         <li class="li-navbar">
           <a href="index.html" class="a-navbar">Home</a>
@@ -34,15 +37,15 @@
     <div class="menu-container">
       <h2 class="header-upper-menu">Top List</h2>
       <div class="upper-menu">
-        <div class="column-upper-menu">
+        <div class="column-upper-menu slide-up">
           <div class="menu-upper-list">
-            <img src="foto/poci-polos-3.png" alt="poci-polos-1" />
-            <h3>Poci Milo</h3>
+            <img src="foto/milo.png" alt="poci-polos-1" />
+            <h3>Milo Tea</h3>
             <hr />
             <h4>Rp 5.000</h4>
           </div>
         </div>
-        <div class="column-upper-menu">
+        <div class="column-upper-menu slide-up">
           <div class="menu-upper-list">
             <img src="foto/poci-polos-3.png" alt="poci-polos-1" />
             <h3>Poci Original</h3>
@@ -50,10 +53,10 @@
             <h4>Rp 5.000</h4>
           </div>
         </div>
-        <div class="column-upper-menu">
+        <div class="column-upper-menu slide-up">
           <div class="menu-upper-list">
-            <img src="foto/poci-polos-3.png" alt="poci-polos-1" />
-            <h3>Poci Original</h3>
+            <img src="foto/jeruk.png" alt="poci-polos-1" />
+            <h3>Jeruk Tea</h3>
             <hr />
             <h4>Rp 5.000</h4>
           </div>
@@ -64,9 +67,97 @@
     <div class="grid-container">
         <h2 class="header-menu">Menu List</h2>
         <div class="grid-items">
-            <div class="column-menu">
+            <div class="column-menu slide-up">
                 <div class="menu-list">
-                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
+                    <img src="foto/anggur.png" alt="poci-polos-3" />
+                    <h3>Anggur Tea</h3>
+                    <hr />
+                    <h4>Rp 4.500</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/apple ice tea.png" alt="poci-polos-3" />
+                    <h3>Apple Ice Tea</h3>
+                    <hr />
+                    <h4>Rp 4.500</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/cappucino.png" alt="poci-polos-3" />
+                    <h3>Cappucino Tea</h3>
+                    <hr />
+                    <h4>Rp 6.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/guava tea.png" alt="poci-polos-3" />
+                    <h3>Guava Tea</h3>
+                    <hr />
+                    <h4>Rp 4.500</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/jasmine tea.png" alt="poci-polos-3" />
+                    <h3>Jasmine Tea</h3>
+                    <hr />
+                    <h4>Rp 3.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/jeruk.png" alt="poci-polos-3" />
+                    <h3>Jeruk Tea</h3>
+                    <hr />
+                    <h4>Rp 4.500</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/lemon tea.png" alt="poci-polos-3" />
+                    <h3>Poci Lemon Tea</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/milk tea.png" alt="poci-polos-3" />
+                    <h3>Poci Milk Tea</h3>
+                    <hr />
+                    <h4>Rp 5.000</h4>
+                </div>
+                <div class="btn-menu-container">
+                    <a class="btn-menu" href="#">Order</a>
+                </div>
+            </div>
+            <div class="column-menu slide-up">
+                <div class="menu-list">
+                    <img src="foto/milo.png" alt="poci-polos-3" />
                     <h3>Poci Milo</h3>
                     <hr />
                     <h4>Rp 5.000</h4>
@@ -75,54 +166,10 @@
                     <a class="btn-menu" href="#">Order</a>
                 </div>
             </div>
-            <div class="column-menu">
+            <div class="column-menu slide-up">
                 <div class="menu-list">
-                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
-                    <h3>Poci Milo</h3>
-                    <hr />
-                    <h4>Rp 5.000</h4>
-                </div>
-                <div class="btn-menu-container">
-                    <a class="btn-menu" href="#">Order</a>
-                </div>
-            </div>
-            <div class="column-menu">
-                <div class="menu-list">
-                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
-                    <h3>Poci Milo</h3>
-                    <hr />
-                    <h4>Rp 5.000</h4>
-                </div>
-                <div class="btn-menu-container">
-                    <a class="btn-menu" href="#">Order</a>
-                </div>
-            </div>
-            <div class="column-menu">
-                <div class="menu-list">
-                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
-                    <h3>Poci Milo</h3>
-                    <hr />
-                    <h4>Rp 5.000</h4>
-                </div>
-                <div class="btn-menu-container">
-                    <a class="btn-menu" href="#">Order</a>
-                </div>
-            </div>
-            <div class="column-menu">
-                <div class="menu-list">
-                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
-                    <h3>Poci Milo</h3>
-                    <hr />
-                    <h4>Rp 5.000</h4>
-                </div>
-                <div class="btn-menu-container">
-                    <a class="btn-menu" href="#">Order</a>
-                </div>
-            </div>
-            <div class="column-menu">
-                <div class="menu-list">
-                    <img src="foto/poci-polos-3.png" alt="poci-polos-3" />
-                    <h3>Poci Milo</h3>
+                    <img src="foto/strawberry tea.png" alt="poci-polos-3" />
+                    <h3>Poci Strawberry Tea</h3>
                     <hr />
                     <h4>Rp 5.000</h4>
                 </div>
@@ -132,6 +179,6 @@
             </div>
         </div>
     </div>
-    
+    <script src="script.js"></script>
   </body>
 </html>
