--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
   </head>
   <body class="content">
     <nav class="container-navbar">
-      <div class="logo">
-        <img src="" alt="logo" />
-      </div>
+      <div class="logo-container">        
+        <img class="logo" src="foto/logo.png" alt="logo">
+        <h1 class="judul-logo">Warung Bu Ida</h1></div>
       <ul class="ul-navbar">
         <li class="li-navbar">
           <a href="index.html" class="a-navbar">Home</a>
