modifikasi js html

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="about-content">
       <div class="poci">
-        <img src="foto/poci.png" alt="" height="450px" />
+        <img class="adit"src="foto/poci.png" alt="" height="450px" />
       </div>
       <div class="about-text">
         <h1>ABOUT US</h1>
