--- a/about.html
+++ b/about.html
@@ -53,6 +53,6 @@
         </p>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
