--- a/faq.html
+++ b/faq.html
@@ -88,6 +88,6 @@
                             </div>
                         </div>
                     </section>
-<script src="app.js"></script>
+<script src="js/script2.js"></script>
 </body>
 </html>
