--- a/menu.html
+++ b/menu.html
@@ -179,6 +179,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script2.js"></script>
   </body>
 </html>
