--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="home-container">
             <div class="judul-home">
                 <h1><span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
-                <h3>Jl. Kali Sari, Dauh Puri Kaja, Kec. Denpasar Utara</h3>
+                <h3>Jl. Kali Sari, Dauh Puri Kaja, Denpasar Utara</h3>
                 <div class="btn-home-container">
                     <a class="btn-home" href="menu.html">Order Now</a>
                 </div>
@@ -47,6 +47,25 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+
+    <!-- footer -->
+    <div class="footer-container">
+        <div class="footer">
+            <div class="footer-judul">
+                <h1>Warung Bu Ida</h1>
+                <h3>Jl. Kali Sari, Dauh Puri Kaja, Denpasar Utara</h3>
+            </div>
+            <div class="img-container">
+                <div class="img-content">
+            <img src="foto/icons8-instagram-48 (3).png" alt="">
+                </div>
+                <div class="img-content">
+            <img src="foto/icons8-whatsapp-60.png" alt="">
+                </div>
+        </div>
+        <h3 class="copyright">&copySubarashi Team</h3>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html> 
