--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,23 @@
     <h3 class="head2">Map</h3>
     <iframe class="g-map"src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3944.5387190246875!2d115.2110186750144!3d-8.640203091406416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMzgnMjQuNyJTIDExNcKwMTInNDguOSJF!5e0!3m2!1sid!2sid!4v1699156071613!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    </section>
+   <div class="footer-container">
+    <div class="footer">
+        <div class="footer-judul">
+            <h1>Warung Bu Ida</h1>
+            <h3>Jl. Kali Sari, Dauh Puri Kaja, Denpasar Utara</h3>
+        </div>
+        <div class="img-container">
+            <div class="img-content">
+        <img src="foto/icons8-instagram-48 (3).png" alt="">
+            </div>
+            <div class="img-content">
+        <img src="foto/icons8-whatsapp-60.png" alt="">
+            </div>
+    </div>
+    <h3 class="copyright">&copySubarashi Team</h3>
+    </div>
+</div>
    <script src="script.js"></script>
 </body>
 </html>
