--- a/faq.html
+++ b/faq.html
@@ -67,6 +67,23 @@
 </div>
 
 </div>
+<div class="footer-container">
+  <div class="footer">
+      <div class="footer-judul">
+          <h1>Warung Bu Ida</h1>
+          <h3>Jl. Kali Sari, Dauh Puri Kaja, Denpasar Utara</h3>
+      </div>
+      <div class="img-container">
+          <div class="img-content">
+      <img src="foto/icons8-instagram-48 (3).png" alt="">
+          </div>
+          <div class="img-content">
+      <img src="foto/icons8-whatsapp-60.png" alt="">
+          </div>
+  </div>
+  <h3 class="copyright">&copySubarashi Team</h3>
+  </div>
+</div>
 <script src="js/faq.js"></script>
 </body>
 </html>
