--- a/index.html
+++ b/index.html
@@ -57,15 +57,12 @@
             </div>
             <div class="img-container">
                 <div class="img-content">
-            <img src="foto/icons8-instagram-48 (3).png" alt="">
-                </div>
-                <div class="img-content">
-            <img src="foto/icons8-whatsapp-60.png" alt="">
+            <a href="https://wa.me//6287759909128"><img src="foto/icons8-whatsapp-60.png" alt=""></a>
                 </div>
         </div>
         <h3 class="copyright">&copySubarashi Team</h3>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html> 
