--- a/menu.html
+++ b/menu.html
@@ -187,10 +187,7 @@
           </div>
           <div class="img-container">
               <div class="img-content">
-          <img src="foto/icons8-instagram-48 (3).png" alt="">
-              </div>
-              <div class="img-content">
-          <img src="foto/icons8-whatsapp-60.png" alt="">
+          <a href="https://wa.me//6287759909128"><img src="foto/icons8-whatsapp-60.png" alt=""></a>
               </div>
       </div>
       <h3 class="copyright">&copySubarashi Team</h3>
