Modifed a whole website

--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
-  <body>
+  <body class="menu">
+    <div></div>
     <nav class="container-navbar">
       <div class="logo-container">        
         <img class="logo" src="foto/logo.png" alt="logo">
@@ -191,6 +192,14 @@
               </div>
       </div>
       <h3 class="copyright">&copySubarashi Team</h3>
+      </div>
+      <div class="line"></div>
+      <div class="kelompok">
+          <h2>Bagus Trinovanda Rahman</h2>
+          <h2>I Gede Komang Bayu Andika</h2>
+          <h2>I Gede Raditya Mahayana Diputra</h2>
+          <h2>Ida Bagus Kade Dwiki Adinata</h2>
+          <h2>Muhammad Bagas Permana Putra</h2>
       </div>
   </div>
     <script src="js/script2.js"></script>
