--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,14 @@
     </div>
     <h3 class="copyright">&copySubarashi Team</h3>
     </div>
+    <div class="line"></div>
+    <div class="kelompok">
+        <h2>Bagus Trinovanda Rahman</h2>
+        <h2>I Gede Komang Bayu Andika</h2>
+        <h2>I Gede Raditya Mahayana Diputra</h2>
+        <h2>Ida Bagus Kade Dwiki Adinata</h2>
+        <h2>Muhammad Bagas Permana Putra</h2>
+    </div>
 </div>
    <script src="script.js"></script>
 </body>
