--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="faq">
     <div class="home-faq">
         <nav class="container-navbar">
             <div class="logo-container">        
@@ -79,6 +79,14 @@
           </div>
   </div>
   <h3 class="copyright">&copySubarashi Team</h3>
+  </div>
+  <div class="line"></div>
+  <div class="kelompok">
+      <h2>Bagus Trinovanda Rahman</h2>
+      <h2>I Gede Komang Bayu Andika</h2>
+      <h2>I Gede Raditya Mahayana Diputra</h2>
+      <h2>Ida Bagus Kade Dwiki Adinata</h2>
+      <h2>Muhammad Bagas Permana Putra</h2>
   </div>
 </div>
 <script src="js/faq.js"></script>
