--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
-<body>
-    <div class="home">
+<body class="home">
     <nav class="container-navbar">
         <div class="logo-container">        
             <img class="logo" src="foto/logo.png" alt="logo">
@@ -35,17 +34,25 @@
 
         <!-- Content -->
         <div class="home-container">
-            <div class="judul-home">
+            <div class="judul-home"> 
+                <div class="judul">
                 <h1><span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
                 <h3>Jl. Kali Sari, Dauh Puri Kaja, Denpasar Utara</h3>
-                <div class="btn-home-container">
-                    <a class="btn-home" href="menu.html">Order Now</a>
-                </div>
+            </div>
             </div>
             <div class="foto-home">
-                <img id="animated-image" src="foto/poci.png" alt="poci">
+                <div class="foto-poci1">
+                    <img id="animated-image" src="foto/jeruk.png" alt="poci">
+                </div>
+                <div class="foto-poci2">
+                    <img id="animated-image" src="foto/poci polos2.png" alt="poci">
+                </div>
+                <div class="foto-poci3">
+                    <img id="animated-image" src="foto/milo.png" alt="poci">
+                </div>
             </div>
         </div>
+
     </div>
 
     <!-- footer -->
@@ -62,7 +69,16 @@
         </div>
         <h3 class="copyright">&copySubarashi Team</h3>
         </div>
+        <div class="line"></div>
+        <div class="kelompok">
+            <h2>Bagus Trinovanda Rahman</h2>
+            <h2>I Gede Komang Bayu Andika</h2>
+            <h2>I Gede Raditya Mahayana Diputra</h2>
+            <h2>Ida Bagus Kade Dwiki Adinata</h2>
+            <h2>Muhammad Bagas Permana Putra</h2>
+        </div>
     </div>
+    
     <script src="js/script.js"></script>
 </body>
 </html> 
