--- a/about.html
+++ b/about.html
@@ -68,11 +68,11 @@
       </div>
       <div class="line"></div>
       <div class="kelompok">
-          <h2>Bagus Trinovanda Rahman</h2>
-          <h2>I Gede Komang Bayu Andika</h2>
-          <h2>I Gede Raditya Mahayana Diputra</h2>
-          <h2>Ida Bagus Kade Dwiki Adinata</h2>
-          <h2>Muhammad Bagas Permana Putra</h2>
+        <h2>Bagus Trinovanda Rahman (Contact)</h2>
+        <h2>I Gede Komang Bayu Andika (FAQ)</h2>
+        <h2>I Gede Raditya Mahayana Diputra (About)</h2>
+        <h2>Ida Bagus Kade Dwiki Adinata (Home)</h2>
+        <h2>Muhammad Bagas Permana Putra (Menu)</h2>
       </div>
   </div>
     <script src="js/script.js"></script>
